--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_PUBLISHER_ID" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1920333630540777" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Header -->
@@ -38,7 +38,7 @@
     <div class="ad-container">
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+             data-ad-client="ca-pub-1920333630540777"
              data-ad-slot="YOUR_AD_SLOT"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
@@ -89,7 +89,7 @@
     <div class="ad-container">
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+             data-ad-client="ca-pub-1920333630540777"
              data-ad-slot="YOUR_AD_SLOT_2"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
@@ -146,7 +146,7 @@
     <div class="ad-container">
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+             data-ad-client="ca-pub-1920333630540777"
              data-ad-slot="YOUR_AD_SLOT_3"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
