Add real AdSense slot ID: 6754956788

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-1920333630540777"
-             data-ad-slot="YOUR_AD_SLOT"
+             data-ad-slot="6754956788"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
         <script>
@@ -90,7 +90,7 @@
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-1920333630540777"
-             data-ad-slot="YOUR_AD_SLOT_2"
+             data-ad-slot="6754956788_2"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
         <script>
@@ -147,7 +147,7 @@
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-1920333630540777"
-             data-ad-slot="YOUR_AD_SLOT_3"
+             data-ad-slot="6754956788_3"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
         <script>
